Some spacing fixes

--- a/public/css/index.less
+++ b/public/css/index.less
@@ -801,9 +801,12 @@ footer p {
   width: 35%;
 }
 
-#sketch img{
-  width: 20%;
-  margin-left: -20px;
+#sketch img {
+  width: 16%;
+}
+
+#jetbrains img {
+  margin-left: -25px;
 }
 
 .clocktowerland {
